@@ -1,3 +1,6 @@
+2010-07-15 Thunor <thunorsif_at_hotmail.com>
+* Both the mctemplate and PipePanic game are complete.
+
 2010-05-11 Thunor <thunorsif_at_hotmail.com>
 * Added a ZX81 machine code template and a pipe connecting game which
   is still under development.
